--- a/versions.cfg
+++ b/versions.cfg
@@ -5,6 +5,7 @@ MarkupSafe = 1.1.0
 Pillow = 5.3.0
 PyNaCl = 1.3.0
 Pybooru = 4.1.0
+appdirs = 1.4.3
 asn1crypto = 0.24.0
 bcrypt = 3.1.4
 beautifulsoup4 = 4.6.3
@@ -13,8 +14,10 @@ certifi = 2018.10.15
 cffi = 1.11.5
 chardet = 3.0.4
 cryptography = 2.4.2
+cssselect = 1.0.3
 decorator = 4.3.0
 emoji = 0.5.1
+fake-useragent = 0.1.11
 ftw.recipe.checkversions = 1.2.1
 future = 0.17.1
 gTTS = 2.0.1
@@ -22,20 +25,28 @@ gTTS-token = 1.1.2
 htmlmin = 0.1.12
 idna = 2.7
 imageio = 2.4.1
+lxml = 4.3.0
 moviepy = 0.2.3.5
 numpy = 1.15.4
 paramiko = 2.4.2
+parse = 1.9.0
 pyasn1 = 0.4.4
 pycparser = 2.19
+pyee = 5.0.0
 pymongo = 3.7.2
+pyppeteer = 0.0.25
+pyquery = 1.4.0
 pytesseract = 0.2.5
 python-telegram-bot = 11.1.0
 requests = 2.20.1
+requests-html = 0.9.0
 setuptools = 40.6.2
 six = 1.11.0
 tqdm = 4.28.1
 urbandictionary = 1.1
 urllib3 = 1.24.1
+w3lib = 1.19.0
+websockets = 7.0
 yandex.translate = 0.3.5
 youtube-dl = 2018.11.23
 zc.buildout = 2.12.2
