Install google translate

--- a/versions.cfg
+++ b/versions.cfg
@@ -47,7 +47,7 @@ urbandictionary = 1.1
 urllib3 = 1.24.1
 w3lib = 1.19.0
 websockets = 7.0
-yandex.translate = 0.3.5
 youtube-dl = 2018.11.23
 zc.buildout = 2.12.2
 zc.recipe.egg = 2.0.7
+googletrans = 2.4.0
