Install mr.developer

--- a/versions.cfg
+++ b/versions.cfg
@@ -22,11 +22,13 @@ ftw.recipe.checkversions = 1.2.1
 future = 0.17.1
 gTTS = 2.0.1
 gTTS-token = 1.1.2
+googletrans = 2.4.0
 htmlmin = 0.1.12
 idna = 2.7
 imageio = 2.4.1
 lxml = 4.3.0
 moviepy = 0.2.3.5
+mr.developer = 1.38
 numpy = 1.15.4
 paramiko = 2.4.2
 parse = 1.9.0
@@ -50,4 +52,3 @@ websockets = 7.0
 youtube-dl = 2018.11.23
 zc.buildout = 2.12.2
 zc.recipe.egg = 2.0.7
-googletrans = 2.4.0
