Fix errors with urbandictionary api
Instead of installing it from PyPi we install it from source because the PyPi version is not up to date.

--- a/main.cfg
+++ b/main.cfg
@@ -12,7 +12,16 @@ show-picked-versions = true
 
 versions = versions
 
+auto-checkout =
+    urbandictionary
+
+
 [bot]
 recipe = zc.recipe.egg
 eggs = XenianBot
 interpreter = py
+
+
+[sources]
+urbandictionary = git https://github.com/bocong/urbandictionary-py.git
+ftw.recipe.checkversions = git https://github.com/4teamwork/ftw.recipe.checkversions.git
