--- a/versions.cfg
+++ b/versions.cfg
@@ -7,31 +7,32 @@ PyNaCl = 1.3.0
 Pybooru = 4.1.0
 appdirs = 1.4.3
 asn1crypto = 0.24.0
-bcrypt = 3.1.5
+bcrypt = 3.1.6
 beautifulsoup4 = 4.7.1
 bs4 = 0.0.1
 certifi = 2018.11.29
-cffi = 1.11.5
+cffi = 1.12.0
 chardet = 3.0.4
-cryptography = 2.4.2
+cryptography = 2.5
 cssselect = 1.0.3
-decorator = 4.3.0
+decorator = 4.3.2
 emoji = 0.5.1
 fake-useragent = 0.1.11
-ftw.recipe.checkversions = 1.2.1
 future = 0.17.1
 gTTS = 2.0.3
 gTTS-token = 1.1.3
 googletrans = 2.4.0
 htmlmin = 0.1.12
 idna = 2.8
-imageio = 2.4.1
-lxml = 4.3.0
-moviepy = 0.2.3.5
+imageio = 2.5.0
+imageio-ffmpeg = 0.2.0
+lxml = 4.3.1
+moviepy = 1.0.0
 mr.developer = 1.38
-numpy = 1.15.4
+numpy = 1.16.1
 paramiko = 2.4.2
-parse = 1.9.0
+parse = 1.11.1
+proglog = 0.1.9
 pyasn1 = 0.4.5
 pycparser = 2.19
 pyee = 5.0.0
@@ -42,13 +43,13 @@ pytesseract = 0.2.6
 python-telegram-bot = 11.1.0
 requests = 2.21.0
 requests-html = 0.9.0
-setuptools = 40.6.3
+setuptools = 40.8.0
 six = 1.12.0
-soupsieve = 1.7
-tqdm = 4.29.1
+soupsieve = 1.7.3
+tqdm = 4.31.1
 urllib3 = 1.24.1
 w3lib = 1.20.0
 websockets = 7.0
-youtube-dl = 2019.1.10
-zc.buildout = 2.12.2
+youtube-dl = 2019.2.8
+zc.buildout = 2.13.1
 zc.recipe.egg = 2.0.7
