Rewrite of database implementation

--- a/versions.cfg
+++ b/versions.cfg
@@ -27,6 +27,7 @@ idna = 2.8
 imageio = 2.5.0
 imageio-ffmpeg = 0.2.0
 lxml = 4.3.1
+mongoengine = 0.16.3
 moviepy = 1.0.0
 mr.developer = 1.38
 numpy = 1.16.1
