--- a/versions.cfg
+++ b/versions.cfg
@@ -1,55 +1,59 @@
 [versions]
-Click = 7.0
-Mako = 1.0.7
-MarkupSafe = 1.1.0
-Pillow = 5.4.1
-PyNaCl = 1.3.0
-Pybooru = 4.1.0
-appdirs = 1.4.3
-asn1crypto = 0.24.0
-bcrypt = 3.1.6
-beautifulsoup4 = 4.7.1
+Mako = 1.1.3
+MarkupSafe = 1.1.1
+Pillow = 7.2.0
+PyNaCl = 1.4.0
+Pybooru = 4.2.0
+appdirs = 1.4.4
+bcrypt = 3.1.7
+beautifulsoup4 = 4.9.1
 bs4 = 0.0.1
-certifi = 2018.11.29
-cffi = 1.12.0
+certifi = 2020.6.20
+cffi = 1.14.1
 chardet = 3.0.4
-cryptography = 2.5
-cssselect = 1.0.3
-decorator = 4.3.2
-emoji = 0.5.1
+click = 7.1.2
+cryptography = 3.0
+cssselect = 1.1.0
+decorator = 4.4.2
+emoji = 0.6.0
 fake-useragent = 0.1.11
-future = 0.17.1
-gTTS = 2.0.3
+gTTS = 2.1.1
 gTTS-token = 1.1.3
-googletrans = 2.4.0
+googletrans = 3.0.0
+h11 = 0.9.0
+hpack = 3.0.0
+hstspreload = 2020.8.8
 htmlmin = 0.1.12
-idna = 2.8
-imageio = 2.5.0
-imageio-ffmpeg = 0.2.0
-lxml = 4.3.1
-moviepy = 1.0.0
-mr.developer = 1.38
-numpy = 1.16.1
-paramiko = 2.4.2
-parse = 1.11.1
+hyperframe = 5.2.0
+idna = 2.10
+imageio = 2.9.0
+imageio-ffmpeg = 0.4.2
+lxml = 4.5.2
+moviepy = 1.0.3
+mr.developer = 2.0.0
+numpy = 1.19.1
+paramiko = 2.7.1
+parse = 1.16.0
 proglog = 0.1.9
-pyasn1 = 0.4.5
-pycparser = 2.19
-pyee = 5.0.0
-pymongo = 3.7.2
-pyppeteer = 0.0.25
-pyquery = 1.4.0
-pytesseract = 0.2.6
-python-telegram-bot = 11.1.0
-requests = 2.21.0
-requests-html = 0.9.0
-setuptools = 40.8.0
-six = 1.12.0
-soupsieve = 1.7.3
-tqdm = 4.31.1
-urllib3 = 1.24.1
-w3lib = 1.20.0
-websockets = 7.0
-youtube-dl = 2019.2.8
-zc.buildout = 2.13.1
+pycparser = 2.20
+pyee = 7.0.2
+pymongo = 3.11.0
+pyppeteer = 0.2.2
+pyquery = 1.4.1
+pytesseract = 0.3.4
+python-telegram-bot = 12.8
+requests = 2.24.0
+requests-html = 0.10.0
+rfc3986 = 1.4.0
+setuptools = 49.2.1
+six = 1.15.0
+sniffio = 1.1.0
+soupsieve = 2.0.1
+tornado = 6.0.4
+tqdm = 4.48.2
+urllib3 = 1.25.10
+w3lib = 1.22.0
+websockets = 8.1
+youtube-dl = 2020.7.28
+zc.buildout = 2.13.3
 zc.recipe.egg = 2.0.7
