Replace youtube_dl with youtube_dlc
youtube_dl might be on the verge of death

--- a/versions.cfg
+++ b/versions.cfg
@@ -54,6 +54,6 @@ tqdm = 4.48.2
 urllib3 = 1.25.10
 w3lib = 1.22.0
 websockets = 8.1
-youtube-dl = 2020.9.20
+youtube-dlc = 2020.10.9
 zc.buildout = 2.13.3
 zc.recipe.egg = 2.0.7
