--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,8 @@ services:
   xenian_bot:
     container_name: xenian_bot
     build: .
-    # ports:
-    #   - 5000:80
-    env_file: .env
+    ports:
+      - 5000:80
     volumes:
-      - ./settings.py:/bot/xenian/bot/settings.py
-
-
+      - ./config/:/config
+    restart: unless-stopped
