--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,28 @@ services:
     container_name: xenian_bot
     build: .
     ports:
-      - 5000:80
+      - 9003:80
     volumes:
       - ./config/:/config
       - ./data:/data
     restart: unless-stopped
+    networks:
+      - app-tier
+
+  xenian_db:
+    container_name: 'xenian_db'
+    image: 'bitnami/mongodb:latest'
+    restart: unless-stopped
+    environment:
+      - MONGODB_USERNAME=xenian
+      - MONGODB_PASSWORD=xenian
+      - MONGODB_DATABASE=xenian
+      - MONGODB_ROOT_PASSWORD=some_secret
+    volumes:
+      - ./data_db:/bitnami/mongodb
+    networks:
+      - app-tier
+
+networks:
+  app-tier:
+    driver: bridge
