Fix mongodb authentication by removing it ...........

--- a/xenian/bot/config/config.json
+++ b/xenian/bot/config/config.json
@@ -61,9 +61,7 @@
   "mongodb": {
     "server": {
       "host": "xenian_db",
-      "port": 27017,
-      "username": "xenian",
-      "password": "xenian"
+      "port": 27017
     },
     "db_name": "xenian"
   }
